# LLP2_Gremlin

./: CMakeLists.txt  README.md  Report.docx  main.c
include/: structure.h
include/stools/: string_tools.h
src/stools/: string_tools.c
src/view_tools/: parser_pieces.c
